--- a/src/components/astro/footer.astro
+++ b/src/components/astro/footer.astro
@@ -9,13 +9,13 @@ const currentYear = new Date().getFullYear()
     [
       {
         text: "Designed By",
-        link: "https://sunguoqi.com",
-        label: "Guoqi Sun",
+        link: "https://memme.cn",
+        label: "7aK's",
       },
       {
         text: "Powered By",
-        link: "https://github.com/sun0225SUN/astro-air",
-        label: "Astro Air",
+        link: "https://github.com/AkcooLer",
+        label: "7aK",
       },
     ].map((item, index) => (
       <>
