--- a/src/components/astro/footer.astro
+++ b/src/components/astro/footer.astro
@@ -13,9 +13,9 @@ const currentYear = new Date().getFullYear()
         label: "7aK's",
       },
       {
-        text: "Powered By",
-        link: "https://github.com/AkcooLer",
-        label: "7aK",
+        text: "ICP备案",
+        link: "https://beian.miit.gov.cn/",
+        label: "京ICP备2025123819号-1",
       },
     ].map((item, index) => (
       <>
