--- a/src/components/astro/footer.astro
+++ b/src/components/astro/footer.astro
@@ -43,18 +43,20 @@ const footerLinks = [
 ]
 ---
 
-<footer class="mt-20 border-t border-gray-200 pb-10 pt-10 dark:border-gray-700">
-  <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4">
+<footer class="mt-10 border-t border-gray-200 pt-6 pb-6 dark:border-gray-700">
+  <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
     {
       footerLinks.map((section) => (
         <div>
-          <h3 class="mb-4 text-lg font-semibold">{section.title}</h3>
-          <ul class="space-y-2">
+          <h3 class="mb-3 text-sm font-medium text-gray-600 dark:text-gray-400">
+            {section.title}
+          </h3>
+          <ul class="space-y-1">
             {section.links.map((link) => (
               <li>
                 <a
                   href={link.href}
-                  class="text-gray-600 transition-colors duration-200 hover:text-primary dark:text-gray-400 dark:hover:text-primary"
+                  class="hover:text-primary dark:hover:text-primary text-sm text-gray-500 transition-colors duration-200 dark:text-gray-500"
                 >
                   {link.text}
                 </a>
@@ -66,19 +68,21 @@ const footerLinks = [
     }
   </div>
 
-  <div class="mt-10 flex flex-wrap items-center justify-center gap-4 text-sm text-gray-600 dark:text-gray-400">
+  <div
+    class="mt-6 flex flex-wrap items-center justify-center gap-3 text-xs text-gray-500 dark:text-gray-400"
+  >
     <p>&copy; {currentYear}</p>
     <p>|</p>
     <a
       href="https://memme.cn"
-      class="transition-colors duration-200 hover:text-primary"
+      class="hover:text-primary transition-colors duration-200"
     >
       Designed By 7aK's
     </a>
     <p>|</p>
     <a
       href="https://beian.miit.gov.cn/"
-      class="transition-colors duration-200 hover:text-primary"
+      class="hover:text-primary transition-colors duration-200"
     >
       京ICP备2025123819号-1
     </a>
