--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -63,6 +63,15 @@ const cspHeader = generateCspHeader()
     <script src="https://cdn.staticfile.org/jquery/3.7.1/jquery.min.js"
     ></script>
 
+    <!-- 引入lightbox2 -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css"
+      rel="stylesheet"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"
+    ></script>
+
     <script is:inline>
       const setTheme = () => {
         const theme =
