--- a/src/components/astro/comments.astro
+++ b/src/components/astro/comments.astro
@@ -1,51 +1,6 @@
 ---
-import { escapeHtml, sanitizeHtml } from "~/utils/security"
-
-interface Props {
-  comment?: string
-}
-
-const { comment = "" } = Astro.props
-
-// 清理和转义评论内容
-const sanitizedComment = sanitizeHtml(comment)
-const escapedComment = escapeHtml(sanitizedComment)
+import Twikoo from "~/components/astro/twikoo.astro"
+import { common } from "~/config"
 ---
 
-<div class="mt-10">
-  <div id="twikoo" class="mt-10"></div>
-  <script>
-    import { escapeHtml, sanitizeHtml } from "~/utils/security"
-
-    // 声明twikoo类型
-    declare global {
-      interface Window {
-        twikoo: {
-          envId: string
-          el: string
-          lang: string
-          path: string
-          onCommentLoaded: () => void
-        }
-      }
-    }
-
-    // 配置Twikoo
-    window.twikoo = {
-      envId: "https://twikoo.7ak.cn",
-      el: "#twikoo",
-      lang: "zh-CN",
-      path: window.location.pathname,
-      onCommentLoaded: function () {
-        // 对评论内容进行XSS防护
-        const comments = document.querySelectorAll(".tk-content")
-        comments.forEach((comment) => {
-          const content = comment.innerHTML
-          comment.innerHTML = escapeHtml(sanitizeHtml(content))
-        })
-      },
-    }
-  </script>
-  <script src="https://cdn.staticfile.org/twikoo/1.6.8/twikoo.all.min.js"
-  ></script>
-</div>
+{common.comments.enabled && common.comments.twikoo.enabled && <Twikoo />}
