--- a/src/components/astro/footer.astro
+++ b/src/components/astro/footer.astro
@@ -16,8 +16,8 @@ const currentYear = new Date().getFullYear()
       },
       {
         text: "Powered By",
-        link: "https://github.com/sun0225SUN/astro-air",
-        label: "Astro Air",
+        link: "https://github.com/AkcooLer",
+        label: "GitHub",
       },
       {
         text: "ICP",
